Creazione sezione sinistra

--- a/index.html
+++ b/index.html
@@ -32,9 +32,25 @@
                     </div>
                     <!-- Notifiche nuovi messaggi -->
                     <div class="notifiche">
-                        
+                        <i class="far fa-bell-slash"></i>
+                        <div class="text-notifiche">
+                            <p>Ricevi notifiche di nuovi messaggi</p>
+                            <span class="c_grey">Attiva notifiche deckstop</span>
+                        </div>
                     </div>
                     <!-- /Notifiche nuovi messaggi -->
+
+                    <!-- Nav-input -->
+                    <div class="container-input-nav">
+                        <div class="container-input-nav-i">
+                            <i class="fas fa-search c_grey"></i>
+                        </div>
+                        <input type="text" name="" id="input_nav" placeholder="Cerca o inizia una nuova chat">
+                    </div>
+                    <!-- /Nav-input -->
+
+                    <!-- Contenitore lista chat -->
+                    <!-- /Contenitore lista chat -->
                 </section>
                 <!-- /Section - nav left -->
 
