--- a/index.html
+++ b/index.html
@@ -50,13 +50,23 @@
                     <!-- /Nav-input -->
 
                     <!-- Contenitore lista chat -->
+                    <div id="contatti">
+                        <div class="chat">
+                            <img src="img/avatar_1.jpg" alt="Michele">
+                            <div class="user">
+                                <p>Michele</p>
+                                <span class="c_grey">Tutto fatto!......</span>
+                            </div>
+                            <p>10/01/2020 16:15:22</p>
+                        </div>
+                    </div>
                     <!-- /Contenitore lista chat -->
                 </section>
                 <!-- /Section - nav left -->
 
                 <!-- Section - right -->
                 <section id="section-right">
-
+                
                 </section>
                 <!-- /Section - right -->
 
