Inizio parte centrale dei messaggi

--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
 
                     <!-- Barra invio messaggio -->
                     <div id="container-input-mess">
-                        
+                        <div class="smile">
+                            <i class="far fa-smile-wink c_grey"></i>
+                        </div>
+                        <input type="text" id="messaggi" placeholder="Scrivi un messaggio">
+                        <div class="microfono">
+                            <i class="fas fa-microphone c_grey"></i>
+                        </div>
                     </div>
                     <!-- /Barra invio messaggio -->
                 </section>
