--- a/index.html
+++ b/index.html
@@ -85,7 +85,20 @@
 
                     <!-- Corpo dei messaggi -->
                     <div id="container-messaggi">
-                        
+                        <div class="messaggio inviato bg_green">
+                            <p>Hai portato a spasso il cane?</p>
+                            <h6 class="c_grey">15:22</h6>
+                        </div>
+                        <div class="messaggio inviato bg_green">
+                            <p>Ricordati di dargi da mangiare</p>
+                            <h6 class="c_grey">15:22</h6>
+                        </div>
+                        <div class="messaggio ricevuto ">
+                            <div class="messaggio inviato bg_white">
+                                <p>Tutto fatto!</p>
+                                <h6 class="c_grey">15:22</h6>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- /Corpo dei messaggi -->
