--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
                     <!-- Contenitore lista chat -->
                     <div id="contatti">
-                        <div class="chat">
-                            <img src="img/avatar_1.jpg" alt="Michele">
+                        <div v-for="(contact, index) in contacts" class="chat">
+                            <img :src="goToImg(index)" alt="Michele">
                             <div class="user">
-                                <p>Michele</p>
+                                <p>{{ contact.name }}</p>
                                 <span class="c_grey">Tutto fatto!......</span>
                             </div>
                             <p>10/01/2020 16:15:22</p>
