--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js" integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -108,7 +109,8 @@
                         <div class="smile">
                             <i class="far fa-smile-wink c_grey"></i>
                         </div>
-                        <input type="text" id="messaggi" placeholder="Scrivi un messaggio">
+                        <input type="text" id="messaggi" placeholder="Scrivi un messaggio"
+                        v-model="nuovoMessaggio" @keydown.enter="addNewMess(activeIndex)">
                         <div class="microfono">
                             <i class="fas fa-microphone c_grey"></i>
                         </div>
